<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_vat"
            android:icon="@drawable/calculate"
            android:title="@string/menu_vat" />
        <item
            android:id="@+id/nav_hrsd"
            android:icon="@drawable/calculate"
            android:title="@string/menu_hrsd" />
        <item
            android:id="@+id/nav_ms"
            android:icon="@drawable/calculate"
            android:title="@string/menu_ms" />
        <item
            android:id="@+id/nav_ca"
            android:icon="@drawable/calculate"
            android:title="@string/menu_ca" />
        <item
            android:id="@+id/nav_zatca"
            android:icon="@drawable/calculate"
            android:title="@string/menu_zatca" />
    </group>
</menu>