<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="sa.nsr.myapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="sa.nsr.myapplication.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="sa.nsr.myapplication.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_vat"
        android:name="sa.nsr.myapplication.ui.vat.VatFragment"
        android:label="@string/menu_vat"
        tools:layout="@layout/fragment_vat" />

    <fragment
        android:id="@+id/nav_hrsd"
        android:name="sa.nsr.myapplication.ui.hrsd.HrsdFragment"
        android:label="@string/menu_hrsd"
        tools:layout="@layout/fragment_hrsd" />

    <fragment
        android:id="@+id/nav_ms"
        android:name="sa.nsr.myapplication.ui.ms.MsFragment"
        android:label="@string/menu_ms"
        tools:layout="@layout/fragment_ms" />

    <fragment
        android:id="@+id/nav_ca"
        android:name="sa.nsr.myapplication.ui.ca.CaFragment"
        android:label="@string/menu_ca"
        tools:layout="@layout/fragment_ca" />

    <fragment
        android:id="@+id/nav_zatca"
        android:name="sa.nsr.myapplication.ui.zatca.ZatcaFragment"
        android:label="@string/menu_zatca"
        tools:layout="@layout/fragment_zatca" />
</navigation>